[package]
name = "lust"
version = "0.1.0"
authors = ["acheronfail"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
tempfile = "3.1.0"
